--- a/styles.css
+++ b/styles.css
@@ -131,34 +131,7 @@
     background-color: #ffc800;
 }
 
-/* home */
-/* .home{
-    width: 100%;
-    height: 80vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    position: relative;
-    background-color: #a9a9a92b;
-    z-index: 0;
-}
 
-.home .img img{
-    flex: 1 1 300px;
-   
-}
-
-.home .img img{
-    width: 50%;
-} */
-/* .home .img img{
-    margin-top: 20px;
-} 
-/* .home .containe{
-    flex: 1 1 400px;
-    margin-top: 20px;
-} */
 .containe h1{
    color: rgb(67 0 86); 
    font-weight: bold;
@@ -308,10 +281,7 @@
     cursor: pointer;
 }
 @media screen and (max-width:600px){
-    /* #cards2 .card .card-image{
-     /* position: relative;*/
-    /* } */ */
-
+ 
     #achetez2{
      position: relative;
      left: 2%;
@@ -319,12 +289,7 @@
     }
 }
 
-/*  */
 
-/* card-2 */
-/* .card-22{
-    width: 200px;
-} */
 
 /* newslater */
 
@@ -488,6 +453,7 @@
     text-shadow: 0px 0px 1px black;
 }
 
+
 /* about */
 
 #about{
@@ -510,6 +476,7 @@
     cursor: pointer;
 }
 /* fin about */
+
 
 /* contacts */
 #contacts .card{
@@ -564,10 +531,7 @@
     border-radius: 50%;
     height: 100px;
 }
-/* .clients{
-    display: flex;
-    justify-content: space-around;
-} */
+
 .clients p{
     font-size: 12px;
     font-weight:600;
@@ -579,27 +543,4 @@
 .radjj {
     border-radius: 20px;
 }
-/*  */
-
-/* @media screen and (max-width:700px) {
-    *{
-        margin: 0;
-        padding: 0;
-    }
-        .navbar{
-        width: 100vw;
-        margin:0;
-        padding: 0;
-    }
-
-    .home{
-        margin: 00;
-        padding: 0;
-        width: 100vw;
-    }
-    #produits-cards{
-        margin: 00;
-        padding: 0;
-        width: 100vw;
-    }
-} */
+/* finnnnnnnnnnnnnnnnnnnnnnn */
